--- a/skeleton/frontend/index.html
+++ b/skeleton/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{% raw %}{{ url_for('static', filename='styles.css') }}{% endraw %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -32,6 +32,6 @@
         </div>
     </section>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{% raw %}{{ url_for('static', filename='script.js') }}{% endraw %}"></script>
 </body>
 </html>
